# pw_textgeneration

./: .gitignore  main.py  pyproject.toml  requirements.txt  ui_app.py
data/: common_gen.csv  train.csv  val.csv
models/gan_dmk_model/: config.json  generation_config.json  model.safetensors
models/t5_baseline/: model.safetensors
src/: data_loader.py  dckg.py  generate.py  preprocess.py  train_gan.py  train_t5.py  utils.py
