[project]
name = "textgeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "transformers>=4.53.3",
]
